# mainer-cli

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  design.md  docker-compose.yml  docker-entrypoint.sh  install.py  install.sh  pyproject.toml  verify_version.py
.claude/: index.json  settings.local.json
docs/: NEW_FEATURES.md  dependency-optimization-summary.md  deploy_improvement_summary.md  final_fix_summary.md  fix_memory_query_issue.md  fix_port_default_bias.md  implementation-plan.md  intelligent_deploy_design.md  intelligent_deploy_implementation.md  langgraph-implementation.md  product-optimization-recommendations.md  tech-stack-analysis.md
src/: __init__.py  cli.py  tui.py  types.py
tests/: __init__.py  test_analyze_integration.py  test_analyze_worker.py  test_cache.py  test_change_tracker.py  test_cli.py  test_command_block_handler.py  test_command_whitelist.py  test_compose.py  test_config.py  test_container_worker.py  test_context.py  test_dashboard.py  test_deploy_executor.py  test_deploy_integration.py  test_deploy_intent.py  test_deploy_project_type.py  test_deploy_prompt.py  test_deploy_verification.py  test_deploy_worker.py  test_detector.py  test_dry_run.py  test_echo_special_handling.py  test_engine.py  test_error_helper.py  test_file_operations.py  test_http_worker.py  test_integration.py  test_kubernetes.py  test_llm_client.py  test_log_analyzer.py  test_memory.py  test_monitor_worker.py  test_notifier.py  test_path_utils.py  test_policy_engine.py  test_port_context_preservation.py  test_prompt.py  (+17 more)
(+99 files in other folders)
