[project]
name = "opsai"
version = "0.2.0"
description = "OpsAI Terminal Assistant - 终端智能运维助手"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "textual>=0.47.0",
    "typer>=0.9.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "langgraph>=0.6.11",
]

[project.scripts]
opsai = "src.cli:app"
opsai-tui = "src.tui:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
clipboard = [
    "pyperclip>=1.11.0",
]
all = [
    "pyperclip>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["UP007"]  # Keep Union syntax for Python 3.9 compatibility

[tool.mypy]
python_version = "3.9"
strict = true
disallow_any_explicit = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-psutil>=7.2.2.20260130",
]
